@@ -1,3 +1,6 @@
+2011-06-13 Vincent CHAVANIS <v.chavanis at telemaque.fr>
+    * gw/smsc/smsc_at.[ch]: added support for throughput in AT smsc
+
 2011-06-13 Alexander Malysh <amalysh at kannel.org>
     * gw/dlr_oracle.c: fixed sql query syntax error. This fixes #607.
       Thanks to Heiki Pikker for this patch.
